# flippio

./: .gitignore  .npmrc  AGENT.md  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_START.md  Makefile  README.md  SIGNATURES.md  build-with-env.js  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  notarize.js  package-lock.json  package.json  test-diagnostic.js  test-transformer.js  test-validation.js  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts  wdio.conf.cjs
src/: main.rs
src-tauri/: Cargo.toml  DEVICE_TESTS.md  FILE_STRUCTURE_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATION_PLAN.md  README.md  build.rs  tauri-ci.conf.json  tauri.conf.json  tauri.conf.json.backup  tauri.i686.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/macos-deps/: afcclient-aarch64-apple-darwin  idevice_id-aarch64-apple-darwin-aarch64-apple-darwin-aarch64-apple-darwin-x86_64-apple-darwin  ideviceinfo-x86_64-apple-darwin  ideviceinstaller-aarch64-apple-darwin  ideviceinstaller-aarch64-apple-darwin-aarch64-apple-darwin  libimobiledevice-1.0.6.dylib  libimobiledevice-glue-1.0.0.dylib  liblzma.5.dylib  libplist-2.0.4.dylib  libssl.3.dylib  libusbmuxd-2.0.7.dylib  libzip.5.5.dylib  libzstd.1.5.7.dylib
src-tauri/src/: commands.rs  database.rs  device.rs  lib.rs  main.rs
src-tauri/src/commands/: common.rs  database.rs  device.rs  device_old.rs  file_dialogs.rs  mod.rs  updater.rs
src-tauri/src/commands/common/: dialog_manager.rs  error_handling.rs  file_operations.rs  mod.rs  shell_executor.rs  update_manager.rs
src-tauri/src/commands/database/: change_tracking.rs  commands.rs  commands_refactored.rs  connection_access.rs  connection_manager.rs  helpers.rs  mod.rs  table_reads.rs  types.rs
src-tauri/src/commands/database/change_history/: commands.rs  integration.rs  manager.rs  mod.rs  types.rs
src-tauri/src/commands/database/tests/: mod.rs
src-tauri/src/commands/device/: adb.rs  embedded_tools.rs  helpers.rs  ios.rs  mod.rs  types.rs  virtual_device.rs
src-tauri/src/commands/device/discovery/: device_scanner.rs  mod.rs
src-tauri/src/commands/device/execution/: mod.rs  (+1 more)
src-tauri/src/commands/ios/: device_management.rs  package_management.rs  simulator_management.rs
src-tauri/tests/: device_integration_tests.rs  mod.rs
src-tauri/tests/fixtures/: mock_devices.rs  mod.rs  temp_files.rs  test_databases.rs  test_databases.sql
src-tauri/tests/fixtures/databases/: test_complex.db  test_ecommerce.db  test_notes.db  test_social.db
src-tauri/tests/integration/: android_workflow_test.rs  cross_platform_workflow_test.rs  database_isolation_test.rs  database_sync_workflow.rs  device_database_workflow.rs  file_transfer_workflow.rs  mod.rs
src-tauri/tests/integration/core/: mod.rs
src-tauri/tests/integration/database/: business_logic_extraction.rs  complete_crud_operations.rs  mod.rs  tauri_command_wrappers.rs
src-tauri/tests/integration/device/: ios_operations.rs  mod.rs
src-tauri/tests/integration/workflows/: cross_platform_integration.rs  database_synchronization.rs  mod.rs
src-tauri/tests/sources/: ios-devices.xml
src-tauri/tests/unit/: common_commands.rs  database_helpers.rs  database_types.rs  device_helpers_fixed.rs  device_helpers_old.rs  file_utilities.rs  ios_helpers.rs  mod.rs  updater_commands.rs
(+539 files in other folders)
