[package]
name = "Flippio"
version = "0.3.8"
description = "Database viewer with device connection"
authors = ["koliastanis"]
edition = "2021"
repository = "https://github.com/groot007/flippio"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tauri-plugin-log = "2.0"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
simplelog = "0.12"
log = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
