[package]
name = "Flippio"
version = "0.3.18"
description = "Database viewer with device connection"
authors = ["koliastanis"]
edition = "2021"
repository = "https://github.com/groot007/flippio"
build = "build.rs"

# Define both library and binary targets
[[bin]]
name = "Flippio"
path = "src/main.rs"

[lib]
name = "flippio"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tauri-plugin-log = "2.0"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
simplelog = "0.12"
log = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.0"

# Test dependencies
[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
assert_fs = "1.1"
predicates = "3.1"
mockall = "0.12"
serial_test = "3.1"
rstest = "0.19"
rusqlite = "0.29"
futures = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
